fixed new added ew ur fixedl
